# sepplotlib

./: README.md  example.ipynb  pyproject.toml
sepplotlib/: __init__.py  biseparation.py  model_criticism.py  separation.py
tests/: test_sepplotlib.py
